--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
 		"globals": "^16.0.0",
 		"layerchart": "2.0.0-next.23",
 		"mdsvex": "^0.12.3",
-		"mode-watcher": "^1.0.8",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-exmarkdown": "^5.0.1",
 		"svelte-sonner": "^1.0.5",
 		"sveltekit-superforms": "^2.27.0",
 		"tailwind-merge": "^3.3.1",
@@ -52,10 +52,12 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"mode-watcher": "^1.0.8",
 		"svelte-motion": "^0.12.2"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
+			"@tailwindcss/oxide",
 			"esbuild"
 		]
 	}
